--- a/ASProjektWPF/Theme/MenuButtonTheme.xaml
+++ b/ASProjektWPF/Theme/MenuButtonTheme.xaml
@@ -12,10 +12,12 @@
                             <Trigger Property="IsChecked" Value="True">
                                 <Setter Property="Foreground" Value="White"/>
                                 <Setter Property="Background" Value="#262626"/>
+                                <Setter Property="IsEnabled" Value="False"/>
                             </Trigger>
                             <Trigger Property="IsChecked" Value="False">
                                 <Setter Property="Foreground" Value="Black"/>
                                 <Setter Property="Background" Value="Transparent"/>
+                                <Setter Property="IsEnabled" Value="True"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
