--- a/ASProjektWPF/MainWindow.xaml
+++ b/ASProjektWPF/MainWindow.xaml
@@ -63,7 +63,7 @@
                 </StackPanel>
                
             </Grid>
-            <Frame x:Name="Page" NavigationUIVisibility="Hidden" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" />
+            <Frame x:Name="Page" NavigationUIVisibility="Hidden" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Margin="2"/>
         </Grid>
     </Border>
 </Window>
