--- a/ASProjektWPF/Pages/Profil.xaml
+++ b/ASProjektWPF/Pages/Profil.xaml
@@ -34,9 +34,9 @@
                         <RowDefinition/>
                         <RowDefinition Height="35px"/>
                     </Grid.RowDefinitions>
-                    <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="0" Grid.RowSpan="7" VerticalAlignment="Bottom" HorizontalAlignment="Left">
-                        <Image Source="/images/app/img1.png" Width="100" Margin="0,0,10,0"/>
-                        <Button Content="dodaj" HorizontalAlignment="Left" Margin="0,5,0,0" Background="White" Foreground="#a4a4a4" Style="{StaticResource ProfileEditButtonTheme}"/>
+                    <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="0" Grid.RowSpan="7" VerticalAlignment="Top" HorizontalAlignment="Left">
+                        <Image x:Name="I_UserPfp" Width="100" Height="150" Margin="0,0,10,0"/>
+                        <Button x:Name="Btn_AddPfp" Content="dodaj" HorizontalAlignment="Left" Margin="0,5,0,0" Background="White" Foreground="#a4a4a4" Style="{StaticResource ProfileEditButtonTheme}" Click="Btn_AddPfp_Click"/>
                     </StackPanel>
                     <Label x:Name="Lbl_Name" Visibility="Collapsed" Content="Imię:" Grid.Column="1" Grid.Row="0"/>
                     <TextBox x:Name="TxtB_Name" Grid.Column="1" Grid.Row="1" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
@@ -45,9 +45,7 @@
                     <Label x:Name="Lbl_CurrentOccupation" Visibility="Collapsed" Content="Aktualne stanowisko:" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2"/>
                     <TextBox x:Name="TxtB_CurrentOccupation" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
                     <Label x:Name="Lbl_Country" Visibility="Collapsed" Content="Państwo:" Grid.Column="1" Grid.Row="4"/>
-                    <ComboBox x:Name="CB_City" Grid.Column="1" Grid.Row="5" Margin="0,0,10,0">
-                        <ComboBoxItem Content="Sth"/>
-                    </ComboBox>
+                    <ComboBox x:Name="CB_Country" Grid.Column="1" Grid.Row="5" Margin="0,0,10,0" SelectedIndex="0"/>
                     <Label x:Name="Lbl_City" Visibility="Collapsed" Content="Miasto:" Grid.Column="2" Grid.Row="4"/>
                     <TextBox x:Name="TxtB_City" Grid.Column="2" Grid.Row="5" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch" VerticalAlignment="Top"/>
                     <Button x:Name="Btn_UserData_Edit" Content="Edytuj" Grid.Row="0" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Center" Background="White" Foreground="#a4a4a4" Style="{StaticResource ProfileEditButtonTheme}" Click="Btn_UserData_Edit_Click"/>
@@ -84,26 +82,16 @@
                             <StackPanel Orientation="Horizontal">
                                 <StackPanel Orientation="Horizontal">
                                     <Label Content="E-mail:"/>
-                                    <Label Content="Email@gmail.com"/>
+                                    <TextBox x:Name="TxtB_Email" Style="{StaticResource ProfileTextBox}" Width="100"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <Label Content="Telefon:"/>
-                                    <TextBox x:Name="TxtB_PhoneNumber" Text="Telefon" Style="{StaticResource ProfileTextBox}" Visibility="Collapsed" HorizontalAlignment="Stretch" VerticalAlignment="Center" Width="100"/>
-                                    <Label x:Name="Lbl_UserPhoneNumber"/>
+                                    <TextBox x:Name="TxtB_PhoneNumber" Style="{StaticResource ProfileTextBox}" Width="100"/>
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="Data urodzenia"/>
-                                <ComboBox x:Name="CB_Day" Visibility="Collapsed" SelectedIndex="0">
-                                    <ComboBoxItem>(Dzień)</ComboBoxItem>
-                                </ComboBox>
-                                <ComboBox x:Name="CB_Month" Visibility="Collapsed" SelectedIndex="0">
-                                    <ComboBoxItem>(Miesiąc)</ComboBoxItem>
-                                </ComboBox>
-                                <ComboBox x:Name="CB_Year" Visibility="Collapsed" SelectedIndex="0">
-                                    <ComboBoxItem>(Rok)</ComboBoxItem>
-                                </ComboBox>
-                                <Label x:Name="Lbl_UserBirthDate"/>
+                                <DatePicker x:Name="DP_User"/>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                                 <Button x:Name="Btn_ContactData_Cancel" Visibility="Hidden" Content="Anuluj" Margin="3" Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_ContactData_Cancel_Click"/>
@@ -159,34 +147,34 @@
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Label Grid.Column="0" Grid.Row="0" Content="Stanowisko"/>
-                        <TextBox Grid.Column="1" Grid.Row="0" Text="Stanowisko" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                        <TextBox x:Name="TxtB_Position" Grid.Column="1" Grid.Row="0" Text="Stanowisko" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
                         <Label Grid.Column="0" Grid.Row="1" Content="Lokalizacja"/>
-                        <TextBox Grid.Column="1" Grid.Row="1" Text="Lokalizacja" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                        <TextBox x:Name="TxtB_Lokalization" Grid.Column="1" Grid.Row="1" Text="Lokalizacja" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
                         <Label Grid.Column="0" Grid.Row="2" Content="Nazwa firmy"/>
-                        <TextBox Grid.Column="1" Grid.Row="2" Text="Pracodawca" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                        <TextBox x:Name="TxtB_Company" Grid.Column="1" Grid.Row="2" Text="Pracodawca" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
                         <Label Grid.Column="0" Grid.Row="3" Content="Okres"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
                             <StackPanel Orientation="Horizontal">
                                 <Label Content="od"/>
-                                <ComboBox SelectedIndex="0">
+                                <ComboBox x:Name="CB_StartPayment_Month" SelectedIndex="0">
                                     <ComboBoxItem>(miesiąc)</ComboBoxItem>
                                 </ComboBox>
-                                <ComboBox SelectedIndex="0">
+                                <ComboBox x:Name="CB_StartPayment_Year" SelectedIndex="0">
                                     <ComboBoxItem>(rok)</ComboBoxItem>
                                 </ComboBox>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                                 <Label Content="Do"/>
-                                <ComboBox SelectedIndex="0">
+                                <ComboBox x:Name="CB_EndPayment_month" SelectedIndex="0">
                                     <ComboBoxItem>(miesiąc)</ComboBoxItem>
                                 </ComboBox>
-                                <ComboBox SelectedIndex="0">
+                                <ComboBox x:Name="CB_EndPayment_year" SelectedIndex="0">
                                     <ComboBoxItem>(rok)</ComboBoxItem>
                                 </ComboBox>
                             </StackPanel>
                         </StackPanel>
                         <Label Grid.Column="0" Grid.Row="4" Content="Obowiącki"/>
-                        <TextBox Grid.Column="1" Grid.Row="4" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
+                        <TextBox x:Name="TxtB_Responsibilities" Grid.Column="1" Grid.Row="4" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="0,10,0,0">
                             <Button x:Name="Btn_ExperienceWork_Cancel" Content="Annuluj"  Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_ExperienceWork_Cancel_Click"/>
                             <Button x:Name="Btn_ExperienceWork_Save" Content="Zapisz" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_ExperienceWork_Save_Click"/>
