--- a/ASProjektWPF/Theme/ProfileTextBox.xaml
+++ b/ASProjektWPF/Theme/ProfileTextBox.xaml
@@ -1,20 +1,18 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="TextBox" x:Key="ProfileTextBox">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border Background="#f1f1f1" BorderThickness="0,0,0,1">
-                        <Grid>
-                            <Rectangle StrokeThickness="1"/>
-                            <TextBox    BorderThickness="0" Background="Transparent" VerticalAlignment="Center"
-                                     Padding="5" Foreground="Black" x:Name="EntryBox"/>
-                            
-                        </Grid>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="Margin" Value="0,0,10,0"/>
+        
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Background" Value="#F4F0EC"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Margin" Value="0,0,5,0"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="Transparent"/>
+                <Setter Property="Foreground" Value="Black"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
