--- a/ASProjektWPF/Pages/Profil.xaml
+++ b/ASProjektWPF/Pages/Profil.xaml
@@ -5,9 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:ASProjektWPF.Pages"
       mc:Ignorable="d" 
-      Background="#ececec"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Profil">
+      Background="#ececec" d:DesignWidth="800"
+      Title="Profil" Height="324">
 
     <ScrollViewer>
         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -122,7 +121,7 @@
                                 <RowDefinition/>
                             </Grid.RowDefinitions>
                             <Label Content="Doświadczenie zawodowe" Padding="10"/>
-                            <Button x:Name="Btn_ExperienceWork_AddNew" Grid.Column="1" Content="dodaj nowy" HorizontalAlignment="Right" Background="White" Foreground="#a4a4a4" VerticalAlignment="Center" Style="{StaticResource ProfileEditButtonTheme}" Click="Btn_ExperienceWork_AddNew_Click"/>
+                            <Button x:Name="Btn_ExperienceWork_AddNew" Grid.Column="1" Content="dodaj nowy" HorizontalAlignment="Right" Background="White" Foreground="#a4a4a4" VerticalAlignment="Center" Style="{StaticResource ProfileEditButtonTheme}" Click="Btn_ExperienceWork_AddNew_Form_Click"/>
                         </Grid>
                     </Border>
 
@@ -167,14 +166,53 @@
                         <TextBox x:Name="TxtB_Responsibilities" Grid.Column="1" Grid.Row="4" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="0,10,0,0">
                             <Button x:Name="Btn_ExperienceWork_Cancel" Content="Annuluj"  Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_ExperienceWork_Cancel_Click"/>
-                            <Button x:Name="Btn_ExperienceWork_Save" Content="Zapisz" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_ExperienceWork_Save_Click"/>
+                            <Button x:Name="Btn_ExperienceWork_Save" Content="Dodaj" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_ExperienceWork_AddNew_Click"/>
                         </StackPanel>
                     </Grid>
-                    <ListView x:Name="LV_UserExperience">
+                    <ListView x:Name="LV_UserExperience" Background="Transparent" BorderThickness="0" >
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Focusable" Value="false"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <StackPanel>
-                                    <TextBlock x:Name="sdf" Text="Historia zatrudnienia to podstawowa informacja, na bazie której pracodawca oceni Twoje kompetencje. Koniecznie uzupełnij informacje o stanowiskach na których pracowałeś i opisz dokładnie wykonywane obowiązki." TextWrapping="Wrap" Padding="10"/>
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition/>
+                                            <RowDefinition/>
+                                            <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="100"/>
+                                            <ColumnDefinition Width="100"/>
+                                        </Grid.ColumnDefinitions>
+                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                                            <TextBlock Text="{Binding Position}" Foreground="Black" />
+                                            <TextBlock Text="{Binding StartPayment,StringFormat=' / {0:MMMM yyyy} - ', ConverterCulture='pl-PL'}" Foreground="Gray"/>
+                                            <TextBlock Foreground="Gray">
+                                                <TextBlock.Style>
+                                                    <Style TargetType="TextBlock">
+                                                        <Setter Property="Text" Value="{Binding EndPayment, StringFormat='{}{0:MMMM yyyy}', ConverterCulture='pl-PL'}"/>
+                                                        <Style.Triggers>
+                                                            <DataTrigger Binding="{Binding EndPayment,StringFormat='{}{0:}'}" Value="{x:Null}">
+                                                                <Setter Property="Text" Value="Obecnie"/>
+                                                            </DataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </TextBlock.Style>
+                                            </TextBlock>
+                                        </StackPanel>
+                                        <Button Grid.Column="1" Content="delete" HorizontalAlignment="Right"/>
+                                        <Button Grid.Column="2" Content="edit" HorizontalAlignment="Right"/>
+                                        <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                            <TextBlock Text="{Binding Company}"/>
+                                            <TextBlock Text="{Binding Localization, StringFormat=' ({0})'}" Foreground="Gray"/>
+                                        </StackPanel>
+                                        <TextBlock Text="{Binding Responsibilities}" Grid.ColumnSpan="3" Grid.Row="2"/>
+                                    </Grid>
                                     <Grid Visibility="Collapsed">
                                         <Grid.Resources>
                                             <Style TargetType="Border">
@@ -195,11 +233,11 @@
                                             <RowDefinition/>
                                         </Grid.RowDefinitions>
                                         <Label Grid.Column="0" Grid.Row="0" Content="Stanowisko"/>
-                                        <TextBox x:Name="TxtB_Possition" Grid.Column="1" Grid.Row="0" Text="{Binding Position}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                                        <TextBox  Grid.Column="1" Grid.Row="0" Text="{Binding Position}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
                                         <Label Grid.Column="0" Grid.Row="1" Content="Lokalizacja"/>
-                                        <TextBox x:Name="TxtB_Lokaslization" Grid.Column="1" Grid.Row="1" Text="{Binding Localization}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                                        <TextBox  Grid.Column="1" Grid.Row="1" Text="{Binding Localization}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
                                         <Label Grid.Column="0" Grid.Row="2" Content="Nazwa firmy"/>
-                                        <TextBox x:Name="TxtB_Csompany" Grid.Column="1" Grid.Row="2" Text="{Binding Company}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                                        <TextBox  Grid.Column="1" Grid.Row="2" Text="{Binding Company}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
                                         <Label Grid.Column="0" Grid.Row="3" Content="Okres"/>
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
                                             <Label Content="Od"/>
@@ -208,10 +246,10 @@
                                             <DatePicker SelectedDate="{Binding EndPayment}"/>
                                         </StackPanel>
                                         <Label Grid.Column="0" Grid.Row="4" Content="Obowiącki"/>
-                                        <TextBox x:Name="TxtB_Respasonsibilities" Text="{Binding Responsibilities}" Grid.Column="1" Grid.Row="4" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
+                                        <TextBox  Text="{Binding Responsibilities}" Grid.Column="1" Grid.Row="4" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
                                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="0,10,0,0">
-                                            <Button x:Name="Btn_ExperienceWork_Cancel" Content="Annuluj"  Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_ExperienceWork_Cancel_Click"/>
-                                            <Button x:Name="Btn_ExperienceWork_Save" Content="Zapisz" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_ExperienceWork_Save_Click"/>
+                                            <Button Content="Annuluj"  Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_ExperienceWork_Cancel_Click" CommandParameter="{Binding}"/>
+                                            <Button  Content="Zapisz" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_ExperienceWork_Update_Click" CommandParameter="{Binding .}"/>
                                         </StackPanel>
                                     </Grid>
                                 </StackPanel>
