--- a/ASProjektWPF/App.xaml
+++ b/ASProjektWPF/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="Theme/ProfileCancelButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/ProfileEditButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/ProfileSaveButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/ProfileDeleteButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/ProfileTextBox.xaml"/>
                 <ResourceDictionary Source="Theme/ProfileTextBoxBorder.xaml"/>
                 <ResourceDictionary Source="Theme/TaskBarButtonTheme.xaml"/>
