--- a/ASProjektWPF/Pages/Profil.xaml
+++ b/ASProjektWPF/Pages/Profil.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:ASProjektWPF.Pages"
       mc:Ignorable="d" 
       Background="#ececec" d:DesignWidth="800"
-      Title="Profil" Height="324">
+      Title="Profil" Height="auto">
 
     <ScrollViewer>
         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -169,90 +169,102 @@
                             <Button x:Name="Btn_ExperienceWork_Save" Content="Dodaj" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_ExperienceWork_AddNew_Click"/>
                         </StackPanel>
                     </Grid>
-                    <ListView x:Name="LV_UserExperience" Background="Transparent" BorderThickness="0" >
+                    <ListView x:Name="LV_UserExperience" Background="Transparent" BorderThickness="0">
                         <ListView.ItemContainerStyle>
                             <Style TargetType="ListViewItem">
-                                <Setter Property="Focusable" Value="false"/>
+                                <Setter Property="IsHitTestVisible" Value="True"/>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="ListViewItem">
+                                            <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                                                <ContentPresenter/>
+                                            </Border>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
                             </Style>
                         </ListView.ItemContainerStyle>
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <StackPanel>
-                                    <Grid>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                            <RowDefinition Height="*"/>
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="100"/>
-                                            <ColumnDefinition Width="100"/>
-                                        </Grid.ColumnDefinitions>
-                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
-                                            <TextBlock Text="{Binding Position}" Foreground="Black" />
-                                            <TextBlock Text="{Binding StartPayment,StringFormat=' / {0:MMMM yyyy} - ', ConverterCulture='pl-PL'}" Foreground="Gray"/>
-                                            <TextBlock Foreground="Gray">
-                                                <TextBlock.Style>
-                                                    <Style TargetType="TextBlock">
-                                                        <Setter Property="Text" Value="{Binding EndPayment, StringFormat='{}{0:MMMM yyyy}', ConverterCulture='pl-PL'}"/>
-                                                        <Style.Triggers>
-                                                            <DataTrigger Binding="{Binding EndPayment,StringFormat='{}{0:}'}" Value="{x:Null}">
-                                                                <Setter Property="Text" Value="Obecnie"/>
-                                                            </DataTrigger>
-                                                        </Style.Triggers>
-                                                    </Style>
-                                                </TextBlock.Style>
-                                            </TextBlock>
-                                        </StackPanel>
-                                        <Button Grid.Column="1" Content="delete" HorizontalAlignment="Right"/>
-                                        <Button Grid.Column="2" Content="edit" HorizontalAlignment="Right"/>
-                                        <StackPanel Grid.Row="1" Orientation="Horizontal">
-                                            <TextBlock Text="{Binding Company}"/>
-                                            <TextBlock Text="{Binding Localization, StringFormat=' ({0})'}" Foreground="Gray"/>
-                                        </StackPanel>
-                                        <TextBlock Text="{Binding Responsibilities}" Grid.ColumnSpan="3" Grid.Row="2"/>
-                                    </Grid>
-                                    <Grid Visibility="Collapsed">
-                                        <Grid.Resources>
-                                            <Style TargetType="Border">
-                                                <Setter Property="Margin" Value="0,0,10,10"/>
-                                            </Style>
-                                        </Grid.Resources>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="100"/>
-                                            <ColumnDefinition/>
-                                            <ColumnDefinition Width="100"/>
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                        </Grid.RowDefinitions>
-                                        <Label Grid.Column="0" Grid.Row="0" Content="Stanowisko"/>
-                                        <TextBox  Grid.Column="1" Grid.Row="0" Text="{Binding Position}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
-                                        <Label Grid.Column="0" Grid.Row="1" Content="Lokalizacja"/>
-                                        <TextBox  Grid.Column="1" Grid.Row="1" Text="{Binding Localization}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
-                                        <Label Grid.Column="0" Grid.Row="2" Content="Nazwa firmy"/>
-                                        <TextBox  Grid.Column="1" Grid.Row="2" Text="{Binding Company}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
-                                        <Label Grid.Column="0" Grid.Row="3" Content="Okres"/>
-                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
-                                            <Label Content="Od"/>
-                                            <DatePicker SelectedDate="{Binding StartPayment}"/>
-                                            <Label Content="Do"/>
-                                            <DatePicker SelectedDate="{Binding EndPayment}"/>
-                                        </StackPanel>
-                                        <Label Grid.Column="0" Grid.Row="4" Content="Obowiącki"/>
-                                        <TextBox  Text="{Binding Responsibilities}" Grid.Column="1" Grid.Row="4" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
-                                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="0,10,0,0">
-                                            <Button Content="Annuluj"  Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_ExperienceWork_Cancel_Click" CommandParameter="{Binding}"/>
-                                            <Button  Content="Zapisz" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_ExperienceWork_Update_Click" CommandParameter="{Binding .}"/>
-                                        </StackPanel>
-                                    </Grid>
-                                </StackPanel>
+                                <Border BorderBrush="#bfbfbf" Background="#dadada" BorderThickness="1" Margin="4" CornerRadius="5">
+                                    <StackPanel Margin="10">
+                                        <Grid x:Name="Grid_Item" Tag="{Binding ElementName=Grid_Item_Form}">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                            </Grid.RowDefinitions>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="100"/>
+                                            </Grid.ColumnDefinitions>
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
+                                                <TextBlock Text="{Binding Position}" Foreground="Black" />
+                                                <TextBlock Text="{Binding StartPayment,StringFormat=' / {0:MMMM yyyy} - ', ConverterCulture='pl-PL'}" Foreground="Gray"/>
+                                                <TextBlock Foreground="Gray">
+                                                    <TextBlock.Style>
+                                                        <Style TargetType="TextBlock">
+                                                            <Setter Property="Text" Value="{Binding EndPayment, StringFormat='{}{0:MMMM yyyy}', ConverterCulture='pl-PL'}"/>
+                                                            <Style.Triggers>
+                                                                <DataTrigger Binding="{Binding EndPayment,StringFormat='{}{0:}'}" Value="{x:Null}">
+                                                                    <Setter Property="Text" Value="Obecnie"/>
+                                                                </DataTrigger>
+                                                            </Style.Triggers>
+                                                        </Style>
+                                                    </TextBlock.Style>
+                                                </TextBlock>
+                                            </StackPanel>
+                                            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                                                <Button Content="Usuń" HorizontalAlignment="Right" Background="White" Foreground="Red" Margin="0,0,10,0" Style="{StaticResource ProfileDeleteButtonTheme}" Click="Btn_ExperienceWork_Delete_Click" CommandParameter="{Binding .}"/>
+                                                <Button Content="Edytuj" HorizontalAlignment="Right" Background="White" Foreground="Gray" Style="{StaticResource ProfileEditButtonTheme}" Click="Btn_ExperienceWork_EditAccExperience_Click"/>
+                                            </StackPanel>
+                                            <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Company}"/>
+                                                <TextBlock Text="{Binding Localization, StringFormat=' ({0})'}" Foreground="Gray"/>
+                                            </StackPanel>
+                                            <TextBlock Text="{Binding Responsibilities}" Grid.ColumnSpan="3" Grid.Row="2"/>
+                                        </Grid>
+                                        <Grid x:Name="Grid_Item_Form" Visibility="Collapsed">
+                                            <Grid.Resources>
+                                                <Style TargetType="Border">
+                                                    <Setter Property="Margin" Value="0,0,10,10"/>
+                                                </Style>
+                                            </Grid.Resources>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="100"/>
+                                                <ColumnDefinition/>
+                                                <ColumnDefinition Width="100"/>
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                                <RowDefinition/>
+                                            </Grid.RowDefinitions>
+                                            <Label Grid.Column="0" Grid.Row="0" Content="Stanowisko"/>
+                                            <TextBox  Grid.Column="1" Grid.Row="0" Text="{Binding Position}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                                            <Label Grid.Column="0" Grid.Row="1" Content="Lokalizacja"/>
+                                            <TextBox  Grid.Column="1" Grid.Row="1" Text="{Binding Localization}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                                            <Label Grid.Column="0" Grid.Row="2" Content="Nazwa firmy"/>
+                                            <TextBox  Grid.Column="1" Grid.Row="2" Text="{Binding Company}" Style="{StaticResource ProfileTextBox}" HorizontalAlignment="Stretch"/>
+                                            <Label Grid.Column="0" Grid.Row="3" Content="Okres"/>
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Column="1" Grid.Row="3">
+                                                <Label Content="Od"/>
+                                                <DatePicker SelectedDate="{Binding StartPayment}"/>
+                                                <Label Content="Do"/>
+                                                <DatePicker SelectedDate="{Binding EndPayment}"/>
+                                            </StackPanel>
+                                            <Label Grid.Column="0" Grid.Row="4" Content="Obowiącki"/>
+                                            <TextBox  Text="{Binding Responsibilities}" Grid.Column="1" Grid.Row="4" Height="100" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible"/>
+                                            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Column="0" Grid.Row="5" Grid.ColumnSpan="2" Margin="0,10,0,0">
+                                                <Button Content="Anuluj" Background="White" Foreground="Gray" Style="{StaticResource ProfileCancelButtonTheme}" Click="Btn_ExperienceWork_Form_Cancel_Click" Tag="{Binding ElementName=Grid_Item}"/>
+                                                <Button Content="Zapisz" Background="#414141" Foreground="White" Style="{StaticResource ProfileSaveButtonTheme}" Click="Btn_ExperienceWork_Form_Update_Click" CommandParameter="{Binding .}"/>
+                                            </StackPanel>
+                                        </Grid>
+                                    </StackPanel>
+                                </Border>
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
