--- a/ASProjektWPF/Theme/ProfileDeleteButtonTheme.xaml
+++ b/ASProjektWPF/Theme/ProfileDeleteButtonTheme.xaml
@@ -1,21 +1,23 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="{x:Type Button}" x:Key="ProfileSaveButtonTheme">
+    <Style TargetType="{x:Type Button}" x:Key="ProfileDeleteButtonTheme">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border>
+                        <Border BorderBrush="Red" BorderThickness="1">
                             <TextBlock Text="{TemplateBinding Property=Content}" Background="{TemplateBinding Background}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5"/>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Cursor" Value="Hand"/>
-                                <Setter Property="Background" Value="#6D6D6D"/>
+                                <Setter Property="Background" Value="#ec1e1e"/>
+                                <Setter Property="BorderBrush" Value="White"/>
                                 <Setter Property="Foreground" Value="White"/>
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
-                                <Setter Property="Background" Value="#525252"/>
+                                <Setter Property="Background" Value="#ec1e1e"/>
+                                <Setter Property="BorderBrush" Value="White"/>
                                 <Setter Property="Foreground" Value="White"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
