--- a/ASProjektWPF/Theme/ProfileEditButtonTheme.xaml
+++ b/ASProjektWPF/Theme/ProfileEditButtonTheme.xaml
@@ -5,18 +5,18 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border BorderBrush="{TemplateBinding Property=Foreground}" BorderThickness="1">
+                        <Border BorderBrush="#bfbfbf" BorderThickness="1">
                             <TextBlock Text="{TemplateBinding Property=Content}" Background="{TemplateBinding Background}" Foreground="{TemplateBinding Foreground}" HorizontalAlignment="Center" VerticalAlignment="Center" Padding="5"/>
                         </Border>
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Cursor" Value="Hand"/>
                                 <Setter Property="Background" Value="White"/>
-                                <Setter Property="Foreground" Value="#a4a4a4"/>
+                                <Setter Property="Foreground" Value="Black"/>
                             </Trigger>
                             <Trigger Property="IsPressed" Value="True">
                                 <Setter Property="Background" Value="White"/>
-                                <Setter Property="Foreground" Value="#a4a4a4"/>
+                                <Setter Property="Foreground" Value="Black"/>
                             </Trigger>
                         </ControlTemplate.Triggers>
                     </ControlTemplate>
